--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -18,13 +18,69 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="ac4-JU-UGK">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="85" id="ac4-JU-UGK" customClass="CustomTableViewCell" customModule="MyPlaces" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="85"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ac4-JU-UGK" id="LgA-i7-7gJ">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="84.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XkR-Wb-2ye">
+                                            <rect key="frame" x="16" y="10" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="65" id="Dvc-jO-lf8"/>
+                                                <constraint firstAttribute="height" constant="65" id="hsb-lK-N5g"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bB1-Ei-Lws">
+                                            <rect key="frame" x="95" y="9" width="264" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="cAW-9O-MuC"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="19"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NB6-eS-hcB">
+                                            <rect key="frame" x="95" y="35" width="264" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="18" id="IN5-Ra-xLE"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lIl-l6-dsv">
+                                            <rect key="frame" x="95" y="54" width="264" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="xo1-cH-yDs"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="lIl-l6-dsv" secondAttribute="bottom" constant="9.5" id="2E9-jp-XJO"/>
+                                        <constraint firstItem="NB6-eS-hcB" firstAttribute="trailing" secondItem="LgA-i7-7gJ" secondAttribute="trailingMargin" id="3wE-q9-C0r"/>
+                                        <constraint firstItem="lIl-l6-dsv" firstAttribute="top" secondItem="NB6-eS-hcB" secondAttribute="bottom" constant="1" id="Elf-IV-u5Q"/>
+                                        <constraint firstItem="XkR-Wb-2ye" firstAttribute="centerY" secondItem="LgA-i7-7gJ" secondAttribute="centerY" id="Oeb-Nl-8wS"/>
+                                        <constraint firstItem="XkR-Wb-2ye" firstAttribute="leading" secondItem="LgA-i7-7gJ" secondAttribute="leading" constant="16" id="Tyi-G7-E1o"/>
+                                        <constraint firstAttribute="trailing" secondItem="bB1-Ei-Lws" secondAttribute="trailing" constant="16" id="Vdl-iZ-wc1"/>
+                                        <constraint firstItem="NB6-eS-hcB" firstAttribute="leading" secondItem="XkR-Wb-2ye" secondAttribute="trailing" constant="14" id="WDc-MO-1d3"/>
+                                        <constraint firstItem="bB1-Ei-Lws" firstAttribute="leading" secondItem="XkR-Wb-2ye" secondAttribute="trailing" constant="14" id="ZJv-Ay-dxb"/>
+                                        <constraint firstAttribute="trailing" secondItem="lIl-l6-dsv" secondAttribute="trailing" constant="16" id="dce-u0-d8J"/>
+                                        <constraint firstItem="bB1-Ei-Lws" firstAttribute="top" secondItem="LgA-i7-7gJ" secondAttribute="top" constant="9" id="gvS-Du-7Bk"/>
+                                        <constraint firstItem="NB6-eS-hcB" firstAttribute="top" secondItem="bB1-Ei-Lws" secondAttribute="bottom" constant="5" id="ozy-Ph-Ofc"/>
+                                        <constraint firstItem="lIl-l6-dsv" firstAttribute="leading" secondItem="XkR-Wb-2ye" secondAttribute="trailing" constant="14" id="ufa-Y8-VEf"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="imageOfPlace" destination="XkR-Wb-2ye" id="fFl-tZ-9bC"/>
+                                    <outlet property="locationLabel" destination="NB6-eS-hcB" id="TKW-cI-KcY"/>
+                                    <outlet property="nameLabel" destination="bB1-Ei-Lws" id="Aoy-tt-Iy7"/>
+                                    <outlet property="typeLabel" destination="lIl-l6-dsv" id="UXT-SF-yVn"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -36,7 +92,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9cY-jW-nXd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="168" y="150"/>
+            <point key="canvasLocation" x="167.19999999999999" y="149.77511244377811"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Iqj-Qc-3XS">
